force-app/main/default/objects/Individual_Academic_Progress__c/Individual_Academic_Progress__c.object-meta.xml
<CustomObject>
    <description>The progress e.g., by term of an individual study in an educational institution.</description>
    <label>Individual Academic Progress</label>
    <nameField>
        <displayFormat>IPR-{00000}</displayFormat>
        <label>Individual Academic Progress #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Academic Progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>