force-app/main/default/objects/Individual_Academic_Progress__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Term</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Study_Term__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Academic_Term</value>
        </filterItems>
        <infoMessage>Please select an academic term.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Study_Term__c</referenceTo>
    <relationshipLabel>Individual Academic Progress</relationshipLabel>
    <relationshipName>Individual_Academic_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>