force-app/main/default/objects/Individual_Academic_Progress__c/fields/Credits_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Credits_Enrolled__c</fullName>
    <description>The total credits enrolled from individual enrollments.</description>
    <inlineHelpText>The total credits enrolled from individual enrollments.</inlineHelpText>
    <label>Credits Enrolled</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>