force-app/main/default/objects/Individual_Academic_Progress__c/fields/Cumulative_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Credits_Earned__c</fullName>
    <description>The cumulative credits earned from individual enrollments.</description>
    <inlineHelpText>The cumulative credits earned from individual enrollments.</inlineHelpText>
    <label>Cumulative Credits Earned</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>