force-app/main/default/objects/Individual_Academic_Progress__c/fields/Cumulative_Units_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Units_Enrolled__c</fullName>
    <description>The cumulative number of individual enrollment with status In Progress/Completed.</description>
    <inlineHelpText>The cumulative number of individual enrollment with status In Progress/Completed.</inlineHelpText>
    <label>Cumulative # of Units Enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>