force-app/main/default/objects/Individual_Academic_Progress__c/fields/Enrollment_Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Action_Status__c</fullName>
    <description>To lock or unlock enrollment for the academic term for a student.</description>
    <inlineHelpText>To lock or unlock enrollment for the academic term for a student.</inlineHelpText>
    <label>Enrollment Action Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enrollment_Action_Status</valueSetName>
    </valueSet>
</CustomField>