force-app/main/default/objects/Individual_Academic_Progress__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <description>The GPA for the academic term calculated based on Quality Points / Credits Attempted.</description>
    <inlineHelpText>The GPA for the academic term calculated based on Quality Points / Credits Attempted.</inlineHelpText>
    <label>GPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>