force-app/main/default/objects/Individual_Academic_Progress__c/fields/Individual_Academic_Profile__c.field-meta.xml
<CustomField>
    <fullName>Individual_Academic_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Academic Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <valueField>Individual_Academic_Profile__c.Contact__c</valueField>
        </filterItems>
        <infoMessage>Please select a profile for the contact.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Individual_Academic_Profile__c</referenceTo>
    <relationshipLabel>Individual Academic Progress</relationshipLabel>
    <relationshipName>Individual_Academic_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>