force-app/main/default/objects/Individual_Academic_Progress__c/fields/Order_Generation_Action__c.field-meta.xml
<CustomField>
    <fullName>Order_Generation_Action__c</fullName>
    <description>This is used to determine if only the new transaction order should be created or create/update the existing transaction order with the related transaction line item.</description>
    <inlineHelpText>This is used to determine if only the new transaction order should be created or create/update the existing transaction order with the related transaction line item.</inlineHelpText>
    <label>Order Generation Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Order Only</fullName>
                <default>true</default>
                <label>New Order Only</label>
            </value>
            <value>
                <fullName>Regeneration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>