force-app/main/default/objects/Individual_Academic_Progress__c/fields/Quality_Points__c.field-meta.xml
<CustomField>
    <fullName>Quality_Points__c</fullName>
    <description>The total quality points from the individual enrollments.</description>
    <inlineHelpText>The total quality points from the individual enrollments.</inlineHelpText>
    <label>Quality Points</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>