force-app/main/default/objects/Individual_Academic_Progress__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Academic_Term__r.End_Date__c &gt;= TODAY() &amp;&amp; Academic_Term__r.Start_Date__c &lt;= TODAY(), &quot;Current&quot;, IF(Academic_Term__r.End_Date__c &lt; TODAY(), &quot;Completed&quot;, &quot;Future&quot;))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>