force-app/main/default/objects/Individual_Academic_Progress__c/fields/Student_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Fee_Type__c</fullName>
    <description>This is used to determine the study fee matrix.</description>
    <inlineHelpText>This is used to determine the study fee matrix.</inlineHelpText>
    <label>Student Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Student_Fee_Types</valueSetName>
    </valueSet>
</CustomField>