force-app/main/default/objects/Individual_Academic_Progress__c/fields/Units_Completed__c.field-meta.xml
<CustomField>
    <fullName>Units_Completed__c</fullName>
    <description>The number of individual enrollment with status Completed.</description>
    <inlineHelpText>The number of individual enrollment with status Completed.</inlineHelpText>
    <label># of Units Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>