force-app/main/default/objects/Individual_Academic_Progress__c/fields/Units_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Units_Enrolled__c</fullName>
    <description>The number of individual enrollment with status In Progress/Completed.</description>
    <inlineHelpText>The number of individual enrollment with status In Progress/Completed.</inlineHelpText>
    <label># of Units Enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>