force-app/main/default/objects/Individual_Academic_Progress__c/validationRules/Required_Academic_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Academic_Term</fullName>
    <active>true</active>
    <description>Ensure that the academic term is populated.</description>
    <errorConditionFormula>ISBLANK( Academic_Term__c ) ||  Academic_Term__r.RecordType.DeveloperName != &apos;Academic_Term&apos;</errorConditionFormula>
    <errorDisplayField>Academic_Term__c</errorDisplayField>
    <errorMessage>The academic term is required.</errorMessage>
</ValidationRule>