force-app/main/default/objects/Individual_Academic_Progress__c/validationRules/Validate_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Contact</fullName>
    <active>true</active>
    <description>To ensure the contact is the same as the contact set on the individual academic profile.</description>
    <errorConditionFormula>NOT(ISBLANK( Individual_Academic_Profile__c )) &amp;&amp; Contact__c !=  Individual_Academic_Profile__r.Contact__c</errorConditionFormula>
    <errorDisplayField>Individual_Academic_Profile__c</errorDisplayField>
    <errorMessage>Please select an individual academic progress that belongs to the same contact.</errorMessage>
</ValidationRule>