force-app/main/default/objects/Individual_Academic_Progress__c/validationRules/Validate_Max_Credits_Enrolled.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Max_Credits_Enrolled</fullName>
    <active>true</active>
    <description>This is to ensure that a student enrolls more than the max credits defined.</description>
    <errorConditionFormula>AND( $Permission.REDU_Student,
   Max_Credits__c != 0,
   Credits_Enrolled__c &gt; Max_Credits__c 
)</errorConditionFormula>
    <errorDisplayField>Credits_Enrolled__c</errorDisplayField>
    <errorMessage>You have exceeded the maximum credits for this term.</errorMessage>
</ValidationRule>