force-app/main/default/objects/Individual_Academic_Progress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Individual_Academic_Profile__c</columns>
    <columns>Academic_Term__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>